--- a/index.html
+++ b/index.html
@@ -429,101 +429,6 @@
           </ul>
         </div>
       </section>
-      <div class="modal-overlay">
-        <div class="modal">
-          <form class="modal-form">
-            <button class="modal-form-close-btn" type="button">
-              <svg class="modal-form-close-btn-icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close"></use>
-              </svg>
-            </button>
-            <h3 class="modal-form-title">
-              Leave your contacts and we will call you back
-            </h3>
-            <div class="modal-form-field">
-              <label class="form-label" for="input-name">Name</label>
-              <div class="input-wrapper">
-                <input
-                  class="form-input"
-                  name="input-name"
-                  id="input-name"
-                  type="text"
-                />
-                <svg
-                  class="input-wrapper-form-icon"
-                  width="18"
-                  height="24"
-                  fill="none"
-                >
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-form-field">
-              <label class="form-label" for="input-phone">Phone</label>
-              <div class="input-wrapper">
-                <input
-                  class="form-input"
-                  name="input-phone"
-                  id="input-phone"
-                  type="tel"
-                />
-                <svg
-                  class="input-wrapper-form-icon"
-                  width="18"
-                  height="24"
-                  fill="none"
-                >
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-form-field">
-              <label class="form-label" for="input-email">Email</label>
-              <div class="input-wrapper">
-                <input
-                  class="form-input"
-                  name="input-mail"
-                  id="input-email"
-                  type="email"
-                />
-                <svg
-                  class="input-wrapper-form-icon"
-                  width="18"
-                  height="24"
-                  fill="none"
-                >
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-form-field">
-              <label class="form-label">Comment</label>
-              <textarea
-                class="form-textarea"
-                name="comment"
-                placeholder="Text input"
-                rows="7"
-              ></textarea>
-            </div>
-          </form>
-          <form class="wrap-policy-form">
-            <div class="modal-policy form-label">
-              <input class="visually-hidden input-checkbox" type="checkbox" />
-              <label class="modal-policy-text">
-                <span class="checkbox-custom">
-                  <svg class="checkbox-custom-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-check"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a href="" class="modal-input-span">Privacy Policy</a>
-              </label>
-            </div>
-          </form>
-          <button class="modal-form-send-btn">Send</button>
-        </div>
-      </div>
     </main>
     <footer class="page-footer">
       <div class="container wrapper-page-footer">
@@ -569,25 +474,122 @@
             </li>
           </ul>
         </div>
-        <form class="form-footer" name="Subscribe" autocomplete="on">
-          <label
-            class="form-footer-label footer-text-sosial-title"
-            for="useremail"
-            >Subscribe
-            <input
-              type="email"
-              id="useremail"
-              class="form-footer-input"
-              placeholder="E-mail"
-          /></label>
-          <button type="submit" class="form-footer-btn">
-            Subscribe
-            <svg class="icon-subscribe" width="24" height="20" fill="none">
-              <use href="./images/icons.svg#icon-icon-send"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="form-footer-wrapper">
+          <p class="footer-text-sosial-title">Subscribe</p>
+          <form class="form-footer" name="Subscribe" autocomplete="on">
+            <label class="form-footer-label">
+              <input
+                name="useremail"
+                type="email"
+                id="useremail"
+                class="form-footer-input"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="form-footer-btn">
+                Subscribe
+                <svg class="icon-subscribe" width="24" height="20" fill="none">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal">
+        <form class="modal-form">
+          <button class="modal-form-close-btn" type="button">
+            <svg class="modal-form-close-btn-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <h3 class="modal-form-title">
+            Leave your contacts and we will call you back
+          </h3>
+          <div class="modal-form-field">
+            <label class="form-label" for="input-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-name"
+                id="input-name"
+                type="text"
+              />
+              <svg
+                class="input-wrapper-form-icon"
+                width="18"
+                height="24"
+                fill="none"
+              >
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="form-label" for="input-phone">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-phone"
+                id="input-phone"
+                type="tel"
+              />
+              <svg
+                class="input-wrapper-form-icon"
+                width="18"
+                height="24"
+                fill="none"
+              >
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="form-label" for="input-email">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-mail"
+                id="input-email"
+                type="email"
+              />
+              <svg
+                class="input-wrapper-form-icon"
+                width="18"
+                height="24"
+                fill="none"
+              >
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="form-label">Comment</label>
+            <textarea
+              class="form-textarea"
+              name="comment"
+              placeholder="Text input"
+              rows="7"
+            ></textarea>
+          </div>
+        </form>
+        <form class="wrap-policy-form">
+          <div class="modal-policy form-label">
+            <input class="visually-hidden input-checkbox" type="checkbox" />
+            <label class="modal-policy-text">
+              <span class="checkbox-custom">
+                <svg class="checkbox-custom-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="modal-input-span">Privacy Policy</a>
+            </label>
+          </div>
+        </form>
+        <button class="modal-form-send-btn">Send</button>
+      </div>
+    </div>
   </body>
 </html>
