--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             </label>
             <button type="submit" class="form-footer-btn">
               Subscribe
-              <svg class="icon-subscribe" width="24" height="20" fill="none">
+              <svg class="icon-subscribe" width="24" height="24" fill="none">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
@@ -498,15 +498,15 @@
     </footer>
     <div class="modal-overlay">
       <div class="modal">
-        <form class="modal-form">
-          <button class="modal-form-close-btn" type="button">
-            <svg class="modal-form-close-btn-icon" width="8" height="8">
-              <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-          </button>
-          <h3 class="modal-form-title">
-            Leave your contacts and we will call you back
-          </h3>
+        <button class="modal-form-close-btn" type="button">
+          <svg class="modal-form-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-form-title">
+          Leave your contacts and we will call you back
+        </p>
+        <form>
           <div class="modal-form-field">
             <label class="form-label" for="input-name">Name</label>
             <div class="input-wrapper">
